src/stylesheets/article-style-st-classic.css
/* ... */
/******** XDXF markup classes *********/

div.xdxf {
}

/* Key -- keys shouldn't normally be present in the article's body since they
 * are accounted for separately, hence we hide them */
.xdxf_k {
  display: none;
}

/* ...and if there's a break after it, we hide it too so we don't have an
 * extra vertical spacing. */
.xdxf_k + br {
  display: none;
}

/* Article structure tag */
.xdxf_num {
  color: red;
  font-weight: bold;
  padding-left: -15px;
}
.xdxf_def {
  display: block;
  border-color: #e3e3e3;
  border-width: 1px;
  border-style: dashed;
  margin: 1px;
  margin-left: 15px;
}

.xdxf_def:target {
  /* this pseudoclass is used to marked out the referenced <def> that was just clicked */
  border-color: red;
  border-width: 1px;
  border-style: double;
}

/* Abbreviation */
.xdxf_abbr {
  font-style: italic;
  color: seagreen;
  cursor: default;
  border-bottom: 1px seagreen dotted;
}

/* Editorial comment */
.xdxf_co,
.xdxf_co_old {
  color: darkslateblue;
  font-style: italic;
}
.xdxf_co:before {
  content: "(";
}
.xdxf_co:after {
  content: ")";
}

/* Grammar information */
.xdxf_gr {
  color: orangered;
  display: block;
}

.xdxf_gr_old {
  color: blue; /*orangered;*/
}

/* Example */
.xdxf_ex {
  color: #808080;
  display: block;
  margin-left: 14px;
}

.xdxf_ex_old {
  color: #808080;
}

.xdxf_ex_source:before {
  content: "[";
}
.xdxf_ex_source:after {
  content: "]";
}

.xdxf_ex_tran:before {
  content: "— ";
}

.xdxf_ex_tran {
  font-style: italic;
}

/* Direct translation */
.xdxf_dtrn {
  font-weight: bold;
  color: #dd7800;
}

/* Transcription */
.xdxf_tr:before {
  content: "[";
}

.xdxf_tr:after {
  content: "]";
}

.xdxf_tr,
.xdxf_tr_old {
  font-weight: bold;
}

/* Resource reference -- for now just a span. Since there's not yet a mechanism
 * to load resources off XDXF articles in GoldenDict, we just hide them. */
.xdxf_rref {
  display: none;
}

.xdxf_headwords {
  font-size: 116%;
  font-weight: bold;
  margin-top: 10px;
  margin-bottom: 10px;
}

/* The words in examples that are meaked out; they are marked out only when placed into <ex> tag */
.xdxf_ex .xdxf_ex_markd,
.xdxf_ex_old .xdxf_ex_markd {
  color: black;
  background-color: lightgray;
}

.xdxf_opt {
  color: #808080;
}

/******** SDictionary markup classes *********/

.sdict_forms {
  font-style: italic;
}

/* Transcription */
.sdict_tr:before {
  content: "[";
}

.sdict_tr:after {
  content: "] ";
}

.sdict_tr {
  font-weight: bold;
}

/************* LSA audio archives **************/

/************* DSL dictionaries **************/

.dsl_u {
  text-decoration: underline;
}

.dsl_article {
  display: inline;
}

.dsl_article .c_default_color {
  color: green;
}

.dsl_m,
.dsl_m0 {
  padding-left: 0px;
}

.dsl_m1 {
  padding-left: 9px;
}

.dsl_m2 {
  padding-left: 18px;
}

.dsl_m3 {
  padding-left: 27px;
}

.dsl_m4 {
  padding-left: 36px;
}

.dsl_m5 {
  padding-left: 45px;
}

.dsl_m6 {
  padding-left: 54px;
}

.dsl_m7 {
  padding-left: 63px;
}

.dsl_m8 {
  padding-left: 72px;
}

.dsl_m9 {
  padding-left: 81px;
}

.dsl_p, .dsl_p :not(a) /* DSL Feature: Enforce the style even if the children tags say otherwise, except links */ {
  color: green !important; /* DSL label color must have highest priority */
  font-style: italic;
  cursor: default;
  font-weight: normal; /* DSL feature: labels are always of normal weight */
}

.dsl_stress_without_accent {
  display: none;
}

.dsl_t {
  font-weight: bold;
}

.dsl_headwords {
  font-weight: bold;
  margin-top: 15px;
  margin-bottom: 10px;
}

.dsl_headwords p {
  font-weight: bold;
  font-size: 15px;
  margin: 0;
}

.dsl_definition p {
  margin: 0;
}

.dsl_opt {
  display: none;
}

.dsl_opt,
.dsl_opt .dsl_ex,
.dsl_opt .dsl_ex :not(a),
.dsl_opt .dsl_ex font[color] /* DSL Feature: Enforce the optional zone color even if the children tags say otherwise */ {
  color: gray;
}

.dsl_ex,
.dsl_ex .dsl_opt {
  color: gray;
}

/* Style for expand optional parts button */
.hidden_expand_opt {
  color: blue;
  cursor: pointer;
  vertical-align: text-bottom;
  width: 16px;
  height: auto;
}

.dsl_s_wav img {
  vertical-align: middle;
}

.dsl_video .img {
  display: inline-block;
  background: url("qrc:///icons/video.svg");
  background-repeat: no-repeat;
  vertical-align: middle;
  width: 22px;
  height: 22px;
  margin: 0;
  padding: 0;
}

.dsl_video .filename {
  display: none; /* by default, the file name is hidden */
  padding-left: 5px;
}

/************* MDict dictionaries **************/
.mdict {
}

.mdict a[name] {
  text-decoration: none;
  color: inherit;
}

/************* Zim dictionaries **************/

.zimdict {
  font-size: 110% !important;
}

.zimdict_headword {
  font-weight: bold !important;
}

/************* Spelling suggestions *****************/

.gdspellsuggestion {
  /* Add some vertical space before the article */
  margin-top: 1em;
}

/************* Stemmed suggestions *****************/

.gdstemmedsuggestion {
  /* Add some horizontal and vertical space */
  margin-top: 1em;
  margin-left: 1px;
}

.gdstemmedsuggestion_head {
  margin-left: 11px;
  font-style: italic;
}

.gdstemmedsuggestion_body {
}

/************* Dictd articles *****************/
.dictd_article {
  /* Add some vertical space before the article */
  margin-top: 1em;
}

.dictd_phonetic:before,
.dictd_phonetic:after {
  content: "\\";
  font-style: normal;
}

.dictd_phonetic:after {
  margin-left: 3px;
}

.dictd_phonetic {
  font-style: italic;
  color: #009900;
}

.dictd_article a:link {
  color: #0000ff;
}

.dictserver_from {
  font-size: 110%;
  font-weight: 600;
}

/************* Epwing dictionaries *****************/

.epwing_narrow_font {
  width: 0.5em;
  height: 1em;
  vertical-align: -15%;
}

.epwing_wide_font {
  width: 1em;
  height: 1em;
  vertical-align: -15%;
}

.epwing_article {
  display: inline;
}

/************* Websites *****************/

.website_padding {
  height: 1em;
  clear: both;
}
/* ... */

